--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -135,4 +135,28 @@
     }
   }
 
-  
+
+  /* Wallet SideBar */
+.sidebar{
+    position: fixed;
+    z-index: 1600;
+    transition: 2s;
+}
+.sidebar.active{
+    bottom: 0;
+}
+.sidebar-overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    transition: 0.5s;
+    opacity: 0;
+    visibility: hidden;
+}
+.sidebar-overlay.active{
+    opacity: 1;
+    visibility: visible;
+}
