end of day first

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -127,6 +127,7 @@
     margin-left: -27%;
     transition: margin-left 0.2s;
     transition-timing-function: linear;
+    cursor: pointer;
   }
   .meter-bar:hover {
     margin-left: 0%;
