--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -116,9 +116,9 @@
     animation-name: buttonTransition;
   }
 
-  span {
-    cursor:none !important;
-  }
+  // span {
+  //   cursor:none !important;
+  // }
   .typed-cursor.typed-cursor--blink {
     display: none !important;
     
